--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,712 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap');
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   list-style-type: none;
+   text-decoration: none !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+   /* font-size */
+   --fs-sm: 14px;
+   --fs-sm1: 16px;
+   --fs-md: 18px;
+   --fs-md1: 17px;
+   --fs-lg: 22px;
+   --fs-lg1: 20px;
+   --fs-xl: 30px;
+   --fs-xl1: 36px;
+   --fs-xxl: 40px;
+
+   /* color */
+
+   --gray: #B2C5D1;
+   --drkblue: #001D49;
+   --bg-blue: #000A1A;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.ff-poppins{
+   font-family: 'Poppins', sans-serif;
+}
+.ff-montserrat{
+   font-family: 'Montserrat', sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.fs-sm {
+   font-size: var(--fs-sm);
 }
 
-.App-link {
-  color: #61dafb;
+.fs-sm1 {
+   font-size: var(--fs-sm1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fs-md {
+   font-size: var(--fs-md);
+}
+
+.fs-md1 {
+   font-size: var(--fs-md1);
+}
+
+.fs-lg {
+   font-size: var(--fs-lg);
+}
+
+.fs-lg1 {
+   font-size: var(--fs-lg1);
+}
+
+.fs-xl1 {
+   font-size: var(--fs-xl1);
+}
+
+.fs-xl1 {
+   font-size: var(--fs-xl1);
+}
+
+.fs-xxl {
+   font-size: var(--fs-xxl);
+}
+
+.gray {
+   color: var(--gray);
+}
+
+.drkblue {
+   color: var(--drkblue);
+}
+
+.bg-blue {
+   background: var(--bg-blue);
+}
+
+.header-bg-img {
+   background-image: url(../src/assets/images/header-bg-img.png);
+   background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
+}
+
+.vhh-100 {
+   min-height: 100vh;
+}
+
+.lh-150 {
+   line-height: 150%;
+}
+
+.loader_bg {
+   z-index: 100 !important;
+}
+
+.d_none {
+   display: none;
+}
+
+.loading-bar {
+   position: relative;
+   width: 110px;
+   height: 110px;
+   background: transparent;
+   border: px solid #3c3c3c;
+   border-radius: 50%;
+   text-align: center;
+   line-height: 111px;
+   font-family: sans-serif;
+   font-size: 15px;
+   color: #fff000;
+   letter-spacing: 3px;
+   text-transform: uppercase;
+   text-shadow: 0 0 20px #fff000;
+   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+.loading-bar:before {
+   content: "";
+   position: absolute;
+   top: -3px;
+   left: -3px;
+   width: 100%;
+   height: 100%;
+   border: 3px solid transparent;
+   border-top: 5px solid #fff000;
+   border-right: 5px solid #fff000;
+   border-radius: 50%;
+   animation: animateC 2s linear infinite;
+}
+
+@keyframes animateC {
+   0% {
+      transform: rotate(0deg);
+   }
+
+   100% {
+      transform: rotate(360deg);
+   }
+}
+
+@keyframes animate {
+   0% {
+      transform: rotate(45deg);
+   }
+
+   100% {
+      transform: rotate(405deg);
+   }
+}
+
+
+
+p {
+   margin-bottom: unset !important;
+}
+
+.nav-line::after {
+   content: "";
+   position: absolute;
+   width: 0;
+   height: 2px;
+   border-radius: 15px;
+   background: #FFF;
+   right: 0;
+   bottom: -20%;
+   transition: .5s;
+}
+
+.nav-line:hover::after {
+   width: 100%;
+   left: 0;
+}
+
+
+.pt-320 {
+   padding-top: 40px;
+}
+
+.pb-20 {
+   padding-bottom: 20px;
+}
+
+.pb-40 {
+   padding-bottom: 40px;
+}
+
+.mw-515 {
+   max-width: 515px;
+}
+
+.mw-408 {
+   max-width: 408px;
+}
+
+.nav-btn {
+   border-radius: 45.5px;
+   background: #FFF;
+   padding: 12px 26px;
+   border: none;
+   transition: .4s;
+}
+
+.nav-btn:hover {
+   background: #001931;
+   color: #FFFFFF;
+   outline: 1px solid #FFF;
+}
+
+ul{
+   padding-left: unset !important;
+}
+
+.lh-41 {
+   line-height: 41px;
+}
+
+.opcity-7 {
+   opacity: 0.7;
+}
+
+.opcity-5 {
+   opacity: 0.5;
+}
+
+.opcity-6 {
+   opacity: 0.6;
+}
+
+.shadowimg {
+   position: absolute;
+   bottom: -1px;
+   left: 0;
+   z-index: -1;
+}
+
+/* minting-section */
+
+.icon {
+   transition: .4s;
+}
+
+.icon:hover {
+   transform: scale(1.2);
+}
+
+
+.line-through {
+   text-decoration-line: line-through !important;
+}
+
+
+.pb-48 {
+   padding-bottom: 48px;
+}
+
+.ml-143 {
+   margin-left: 0px;
+}
+
+.sec-1-btn {
+   padding: 10px 20px;
+   border-radius: 45.5px;
+   background: #FFF;
+   font-family: 'Poppins', sans-serif;
+   border: none;
+   transition: .4s;
+
+}
+
+
+.sec-1-btn:hover {
+   background-color: #001931;
+   color: #FFFFFF;
+   outline: 1px solid #FFF;
+}
+
+.pb-60 {
+   padding-bottom: 31px;
+}
+
+.pt-50 {
+   padding-top: 50px;
+}
+
+.pt-135 {
+   padding-top: 60px;
+}
+
+.elips1 {
+   width: 100%;
+   width: 200px;
+   height: 337px;
+   border-radius: 337px;
+   background: #009DFF;
+   filter: blur(250px);
+   z-index: -1;
+   position: absolute;
+   top: 40%;
+   left: 27%;
+}
+
+.elips2 {
+   width: 100%;
+   width: 200px;
+   height: 337px;
+   border-radius: 337px;
+   background: #009DFF;
+   filter: blur(250px);
+   z-index: -1;
+   position: absolute;
+   bottom: -4%;
+   right: 0%;
+}
+
+.lh-136 {
+   line-height: 136%;
+}
+
+/* crd-section */
+.common-crd {
+   border-radius: 20px;
+   background: #031227;
+   height: 100%;
+}
+
+.pding-1 {
+   padding: 30px 30px 126px 30px;
+}
+
+.pding-2 {
+   padding: 30px 30px 48px 30px;
+}
+
+.pding-4 {
+   padding: 30px 30px 94px 30px;
+}
+
+.pding-5 {
+   padding: 30px 30px 4px 30px;
+}
+
+/* roadmap */
+
+.timeline {
+   position: relative;
+   max-width: 1000px;
+   margin: 0 auto;
+}
+
+.timeline::after {
+   content: '';
+   position: absolute;
+   border: 2px dashed white;
+   top: 18px;
+   bottom: -20px;
+   left: 50%;
+   margin-left: -3px;
+   width: 2px;
+   height: 78%;
+}
+
+.common-container {
+   padding: 10px 40px;
+   position: relative;
+   background-color: inherit;
+   width: 50%;
+}
+
+.common-container::after {
+   content: '';
+   position: absolute;
+   width: 32px;
+   height: 32px;
+   right: 585px;
+   background-color: #009DFF;
+   border: 4px solid #FFFFFF;
+   outline: 8px solid #001931;
+   top: 20px;
+   border-radius: 50%;
+   z-index: 1;
+}
+
+.mb-135 {
+   margin-bottom: 135px;
+}
+
+.left {
+   left: 0;
+}
+
+.right {
+   left: 50%;
+}
+
+.right::after {
+   left: -16px;
+}
+
+.left::after {
+   right: -16px;
+}
+
+.pr-27 {
+   padding-right: 27px;
+}
+
+
+.mx-720 {
+   max-width: 720px;
+}
+
+
+.mx-352 {
+   max-width: 377px;
+}
+
+.ml-15 {
+   margin-left: 15px;
+}
+
+.mr-15 {
+   margin-right: 15px;
+}
+
+.mx-400 {
+   max-width: 400px;
+}
+
+.mx-408 {
+   max-width: 408px;
+}
+
+/* faqs */
+
+.accordion {
+   --bs-accordion-bg: unset !important;
+   --bs-accordion-border-color: unset !important;
+   --bs-accordion-active-bg: unset !important;
+   max-width: 830px;
+}
+
+.z-index-1 {
+   z-index: -1;
+}
+
+.accordion-button {
+   border-radius: 150px !important;
+}
+
+.margin-auto {
+   margin-left: auto;
+   margin-right: auto;
+}
+
+.acc-crd {
+   border-radius: 150px;
+   background: #031227;
+
+   height: 64px;
+   flex-shrink: 0;
+}
+
+
+
+.accordion-button:focus {
+   box-shadow: unset !important;
+}
+
+.accordion-button::after {
+   background-image: url(../src/assets/images/arrow.png) !important;
+
+}
+
+.accordion-button:not(.collapsed)::after {
+   background-image: none;
+}
+
+.mx-764 {
+   max-width: 764px;
+}
+
+/* footer section */
+.bg-fimg {
+   background-image: url(../src/assets/images/footer-bg-img.png);
+   background-repeat: no-repeat;
+   width: 100%;
+}
+
+.mx-331 {
+   max-width: 331px;
+}
+
+@media (min-width:567px) {
+   :root {
+      /* font-size */
+      --fs-sm: 14px;
+      --fs-sm1: 16px;
+      --fs-md: 18px;
+      --fs-md1: 20px;
+      --fs-lg: 22px;
+      --fs-lg1: 25px;
+      --fs-xl: 30px;
+      --fs-xl1: 50px;
+      --fs-xxl: 70px;
+   }
+
+   .pding-1 {
+      padding: 39px 40px 156px 39px;
+   }
+
+   .pding-2 {
+      padding: 39px 40px 78px 39px;
+   }
+
+   .pding-4 {
+      padding: 39px 40px 104px 39px;
+   }
+
+   .pding-5 {
+      padding: 39px 40px 14px 39px;
+   }
+
+}
+
+@media (min-width:767.8px) {
+   .elips1 {
+      width: 337px;
+   }
+   .bg-fimg {
+      background-image: url(../src/assets/images/footer-bg-img.png);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      width: 100%;
+   }
+   .elips2 {
+      width: 337px;
+   }
+
+   .nav-btn {
+      padding: 16px 40px;
+   }
+
+   .pb-60 {
+      padding-bottom: 60px;
+   }
+
+   .pding-1 {
+      padding: 39px 40px 156px 39px;
+   }
+
+   .pding-2 {
+      padding: 39px 40px 78px 39px;
+   }
+
+   .pding-4 {
+      padding: 39px 40px 124px 39px;
+   }
+
+   .pding-5 {
+      padding: 39px 40px 34px 39px;
+   }
+}
+
+@media (min-width:991.8px) {
+   .ml-143 {
+      margin-left: 100px;
+   }
+
+   .pt-320 {
+      padding-top: 261px;
+   }
+
+   .pt-135 {
+      padding-top: 135px;
+   }
+
+}
+
+@media (max-width: 991.9px) {
+   .mobileView {
+      position: absolute;
+      background: var(--drkblue);
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 100vh;
+      width: 100%;
+      top: 0;
+      left: -100%;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      transition: 300ms linear;
+      z-index: 3;
+   }
+
+   .z-5 {
+      z-index: 5;
+   }
+
+   .overflow_hidden {
+      overflow: hidden !important;
+   }
+
+   .menu span.nav-line1 {
+      height: 2px;
+      width: 30px;
+      background-color: #FFF;
+      display: block;
+      border-radius: 20px;
+   }
+
+   .menu span.nav-line2 {
+      height: 2px;
+      width: 30px;
+      background-color: #FFF;
+      display: block;
+      border-radius: 20px;
+   }
+
+   .menu span.nav-line3 {
+      height: 2px;
+      width: 30px;
+      background-color: #FFF;
+      display: block;
+      border-radius: 20px;
+   }
+
+   .menu span {
+      transition: 300ms linear;
+   }
+
+   .cross span.nav-line1 {
+      transform: rotate(42deg) translateY(13px);
+      transition: 300ms linear;
+      background-color: #FFF;
+      width: 30px;
+   }
+
+   .cross span.nav-line2 {
+      transform: translateX(-100%);
+      opacity: 0;
+      transition: 300ms linear;
+   }
+
+   .cross span.nav-line3 {
+      transform: rotate(-43deg) translateY(-13px);
+      transition: 300ms linear;
+      background-color: #FFF;
+      width: 30px;
+   }
+
+}
+
+@media (max-width: 768px) {
+
+   .timeline::after {
+      left: 34px;
+   }
+
+   .text-end {
+      text-align: unset !important;
+   }
+
+   .common-container {
+      width: 100%;
+      padding-left: 70px;
+      padding-right: 25px;
+   }
+
+   .common-container::before {
+      left: 60px;
+      border: medium solid white;
+      border-width: 10px 10px 10px 0;
+      border-color: transparent white transparent transparent;
+   }
+
+   .common-container {
+      width: 100%;
+      padding-left: 70px;
+      padding-right: 25px;
+   }
+
+   .common-container::before {
+      left: 60px;
+      border: medium solid white;
+      border-width: 10px 10px 10px 0;
+      border-color: transparent white transparent transparent;
+   }
+
+   .left::after,
+   .right::after {
+      left: 15px;
+   }
+
+   .right {
+      left: 0%;
+   }
+
+   .mb-sm-40 {
+      margin-bottom: 40px;
+   }
 }
